--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,13 @@
     </dependencyManagement>
 
     <dependencies>
+
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-mongodb-panache</artifactId>
+            <!-- <version>3.18.1</version> -->
+        </dependency>
+
         <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-mongodb-client</artifactId>
@@ -57,7 +64,7 @@
         <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>mongodb-driver-sync</artifactId>
-            <version>5.3.0</version>
+            <!-- <version>5.3.0</version> -->
         </dependency>
         <dependency>
             <groupId>io.quarkus</groupId>
