--- a/src/main/docker/Dockerfile.native
+++ b/src/main/docker/Dockerfile.native
@@ -7,11 +7,11 @@
 #
 # Then, build the image with:
 #
-# docker build -f src/main/docker/Dockerfile.native -t quarkus/mongodb-app .
+# docker build -f src/main/docker/Dockerfile.native -t quarkus/mongodb-luca-buetzberger .
 #
 # Then run the container using:
 #
-# docker run -i --rm -p 8080:8080 quarkus/mongodb-app
+# docker run -i --rm -p 8080:8080 quarkus/mongodb-luca-buetzberger
 #
 ###
 FROM registry.access.redhat.com/ubi8/ubi-minimal:8.10
