--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 quarkus.mongodb.connection-string=mongodb+srv://lucabuetzberger:enhmdTp3xaVPTFMN@cluster0.7hskc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 quarkus.mongodb.database=my_database_name
+# quarkus.log.level= DEBUG
